Fix alignment on header as well as fix logo
Add proper alignment to header so that it lines up with the body text
horizontally. Also fix logo so that it is bold and the adjacent links
are normal size.

--- a/style.css
+++ b/style.css
@@ -15,15 +15,13 @@ body{
     background-color: #1f2937; 
     color: white; 
     font-size: 24px; 
-    
-    display: flex; 
-    padding-top: 10px; 
-    flex-wrap: wrap; 
-    flex-direction: row;
+    font-weight: 600; 
     gap: 10px; 
+    padding-top: 10px;
     padding-left: 12%; 
     padding-right: 12%; 
 }
+
 
 .top-header{
     display: flex; 
@@ -39,33 +37,16 @@ body{
 ul{
     list-style-type: none;
     font-size: 18px; 
+    font-weight: 100; 
     margin: 0px; 
     padding: 0px; 
     display: flex; 
     gap: 20px; 
 }
 
-.li{
-    font-size: 18px;
-    color: #e5e7eb;
-}
-
-#headerLogo{
-    font-size: 24px;
-    color: #F9faf8;
-    font-weight: 900; 
-}
-
 a{
     font-size: 18px;
     color: #e5e7eb; 
-}
-
-.header-left-alignment{
-    display: flex;
-    flex-direction: column;
-    color: #1f2937;
-    width: 10%; 
 }
 
 .site-intro{
@@ -78,7 +59,7 @@ a{
     padding-right: 12%; 
     align-items: center; 
     flex: auto; 
-    height: 250px; 
+    height: 200px; 
 }
 
 .site-intro-left{
@@ -137,13 +118,6 @@ button {
     flex: 1;
 }
 
-.grey-body{
-    background-color: #e5e7eb;
-    color: black; 
-    display: flex;
-    flex: 1; 
-}
-
 .random-row{
     display: flex;
     justify-content: center;
@@ -164,8 +138,14 @@ button {
     display: block; 
     background:blue; 
     border: 10px; 
-    border-color: blue; 
-    
+    border-color: blue;   
+}
+
+.grey-body{
+    background-color: #e5e7eb;
+    color: black; 
+    display: flex;
+    flex: 1; 
 }
 
 
